# thetirtayasa

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202607230001_initial_schema.py
backend/app/: main.py
backend/app/ai/: gemini_chat.py  gemini_embeddings.py
backend/app/api/: chat.py  chat_feedback.py  contact.py  ingestion.py  projects.py
backend/app/chat/: budget.py  limits.py  orchestrator.py  persistence.py  policy.py
backend/app/content/: loader.py  schemas.py
backend/app/core/: config.py
backend/app/database/: base.py  session.py
backend/app/ingestion/: chunker.py  hash.py  parser.py  service.py
backend/app/models/: chat.py  contact.py  projects.py
backend/app/prompts/: system_prompt.py
backend/app/repositories/: chat.py  contact.py  documents.py  rate_limits.py
backend/app/retrieval/: ranking.py  repository.py  service.py
backend/app/security/: ip_identity.py  redaction.py
backend/tests/: test_ai_evaluation.py  test_budget_controls.py  test_chat_api.py  test_chat_guardrails.py  test_chat_orchestrator.py  test_chat_persistence.py  test_contact_api.py  test_content_validation.py  test_cors.py  test_database_timestamp_contract.py  test_deployment_artifacts.py  test_feedback_api.py  test_gemini_chat.py  test_gemini_embeddings.py  test_health.py  test_ingestion_chunking.py  test_ingestion_sync.py  test_limits_and_cors.py  test_migration_contract.py  test_projects_api.py  test_redaction.py  test_repositories.py  test_retrieval.py  test_system_prompt.py
backend/tests/evaluation/: README.md  availability.yaml  compensation.yaml  skills.yaml  (+4 more)
(+75 files in other folders)
