[project]
name = "thetirtayasa-portfolio-backend"
version = "0.1.0"
description = "FastAPI backend for Abdul F. Tirtayasa Data Analyst & AI Enabler portfolio"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.6",
  "httpx2>=0.1.0",
  "pydantic-settings>=2.6.1",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
    "S",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
