[project]
name = "thetirtayasa-portfolio-backend"
version = "0.1.0"
description = "FastAPI backend for Abdul F. Tirtayasa Data Analyst & AI Enabler portfolio"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "fastapi[standard]>=0.115.6",
  "google-genai>=1.0.0",
  "httpx2>=0.1.0",
  "pgvector>=0.3.6",
  "pydantic-settings>=2.6.1",
  "pyyaml>=6.0.2",
  "sqlalchemy[asyncio]>=2.0.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
    "S",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
